--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
             <a href="https://github.com/anidip143">
                 <i class="bx bxl-github"></i>
             </a>
-            <a href="https://www.linkedin.com/login/">
+            <a href="https://www.linkedin.com/in/animesh-mal-01a254276/">
                 <i class="bx bxl-linkedin-square"></i>
             </a>
-            <a href="https://www.instagram.com/login/">
+            <a href="https://www.instagram.com/anidip1_4_3/">
                 <i class="bx bxl-instagram-alt"></i>
             </a>
-            <a href="https://www.twitter.com/login/">
+            <a href="https://x.com/Anidip143">
                 <i class="bx bxl-twitter"></i>
             </a>
         </div>
